--- a/Tests/packages.config
+++ b/Tests/packages.config
@@ -11,11 +11,12 @@
   <package id="Moq" version="4.7.10" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
-  <package id="xunit" version="2.2.0" targetFramework="net46" />
+  <package id="xunit" version="2.3.1" targetFramework="net46" />
   <package id="xunit.abstractions" version="2.0.1" targetFramework="net46" />
-  <package id="xunit.assert" version="2.2.0" targetFramework="net46" />
-  <package id="xunit.core" version="2.2.0" targetFramework="net46" />
-  <package id="xunit.extensibility.core" version="2.2.0" targetFramework="net46" />
-  <package id="xunit.extensibility.execution" version="2.2.0" targetFramework="net46" />
-  <package id="xunit.runner.visualstudio" version="2.2.0" targetFramework="net46" developmentDependency="true" />
+  <package id="xunit.analyzers" version="0.7.0" targetFramework="net46" />
+  <package id="xunit.assert" version="2.3.1" targetFramework="net46" />
+  <package id="xunit.core" version="2.3.1" targetFramework="net46" />
+  <package id="xunit.extensibility.core" version="2.3.1" targetFramework="net46" />
+  <package id="xunit.extensibility.execution" version="2.3.1" targetFramework="net46" />
+  <package id="xunit.runner.visualstudio" version="2.3.1" targetFramework="net46" developmentDependency="true" />
 </packages>
