--- a/Saule/Saule.csproj
+++ b/Saule/Saule.csproj
@@ -66,6 +66,7 @@
     <Compile Include="ApiResource.cs" />
     <Compile Include="Http\HandlesQueryAttribute.cs" />
     <Compile Include="Http\JsonApiAttribute.cs" />
+    <Compile Include="Http\JsonApiProcessor.cs" />
     <Compile Include="Http\JsonApiQueryValueProvider.cs" />
     <Compile Include="Http\JsonApiQueryValueProviderFactory.cs" />
     <Compile Include="JsonApiSerializerOfT.cs" />
