--- a/Saule/Saule.csproj
+++ b/Saule/Saule.csproj
@@ -70,6 +70,9 @@
     <Compile Include="Http\JsonApiQueryValueProvider.cs" />
     <Compile Include="Http\JsonApiQueryValueProviderFactory.cs" />
     <Compile Include="JsonApiSerializerOfT.cs" />
+    <Compile Include="Serialization\CamelCasePropertyNameConverter.cs" />
+    <Compile Include="Serialization\DefaultPropertyNameConverter.cs" />
+    <Compile Include="Serialization\IPropertyNameConverter.cs" />
     <Compile Include="StringDictionaryExtensions.cs" />
     <Compile Include="FormatterPriority.cs" />
     <Compile Include="Http\DisableDefaultIncludedAttribute.cs" />
