--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Helpers\ExpressionComparer.cs" />
     <Compile Include="Http\JsonApiMediaTypeFormatterTests.cs" />
     <Compile Include="Http\QueryFilterExpressionCollectionTests.cs" />
+    <Compile Include="Integration\PropertyNameConverterTests.cs" />
     <Compile Include="Integration\JsonApiMediaTypeFormatterTests.cs" />
     <Compile Include="Models\Car.cs" />
     <Compile Include="Models\CarResource.cs" />
