added LinkType.Top enum, so we can specify only top level links

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -140,6 +140,7 @@
     <Compile Include="Models\PersonJobOnlyRelatedLinksResource.cs" />
     <Compile Include="Models\PersonJobOnlySelfLinksResource.cs" />
     <Compile Include="Models\PersonNoJobLinksResource.cs" />
+    <Compile Include="Models\PersonOnlyTopLinksResource.cs" />
     <Compile Include="Models\PersonNoLinksResource.cs" />
     <Compile Include="Models\PersonWithCompanyWithCustomersResource.cs" />
     <Compile Include="Models\PersonWithGuidAsRelationsResource.cs" />
