--- a/Saule/Saule.csproj
+++ b/Saule/Saule.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Http\JsonApiProcessor.cs" />
     <Compile Include="Http\JsonApiQueryValueProvider.cs" />
     <Compile Include="Http\JsonApiQueryValueProviderFactory.cs" />
+    <Compile Include="Http\BulkExtRouteAttributeAttribute.cs" />
     <Compile Include="JsonApiSerializerOfT.cs" />
     <Compile Include="Queries\Fieldset\FieldsetContext.cs" />
     <Compile Include="Queries\Fieldset\FieldsetProperty.cs" />
