add licence tag and file

--- a/Saule/Saule.csproj
+++ b/Saule/Saule.csproj
@@ -39,6 +39,7 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <CodeAnalysisRuleSet>..\StyleCop.Analyzers.ruleset</CodeAnalysisRuleSet>
     <CodeAnalysisIgnoreGeneratedCode>true</CodeAnalysisIgnoreGeneratedCode>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Humanizer, Version=2.6.0.0, Culture=neutral, PublicKeyToken=979442b78dfc278e, processorArchitecture=MSIL">
@@ -146,9 +147,7 @@
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="LICENSE">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    <None Include="LICENSE.txt" Pack="true"  PackagePath="LICENSE.txt"/>
     <None Include="packages.config" />
     <None Include="Saule.nuspec" />
   </ItemGroup>
