--- a/Saule/Saule.nuspec
+++ b/Saule/Saule.nuspec
@@ -6,7 +6,7 @@
     <title>Saule for Json Api</title>
     <authors>Jouke van der Maas</authors>
     <owners>Jouke van der Maas</owners>
-    <license type="file">LICENSE</license>
+    <license type="file">LICENSE.txt</license>
     <projectUrl>https://github.com/joukevandermaas/saule/</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Json api library for ASP.Net Web API 2. This is custom package for MyGet based on original Saule</description>
